# Novel

./: .env.example  .gitignore  CLAUDE.md  NEXT_STEPS.md  SPEC.md  pyproject.toml  run_full_novel.py  run_full_test.py  run_moshi.py  run_narration_test.py
src/.claude/: settings.local.json
src/assembler/: __init__.py  assembler.py  ken_burns.py
src/cli/: main.py
src/core/: __init__.py  config.py  llm_client.py  manifest_manager.py  pipeline.py
src/image_gen/: __init__.py  base.py  comfyui.py  placeholder.py  replicate_backend.py
src/image_pipeline/: __init__.py  orchestrator.py  prompt_generator.py  prompts.py  ref_selector.py  scene_analyzer.py  sentence_splitter.py  visual_sheet.py
src/models/: __init__.py  enums.py  manifest.py
src/narration/: __init__.py  archetype.py  bible.py  harvester.py  narrator_v2.py  orchestrator.py  prompts.py
src/scraper/: __init__.py  base.py  fanqie.py  font_decryptor.py  hetushu.py  rate_limiter.py
src/segmenter/: __init__.py  character_extractor.py  narrator.py  prompts.py  rewriter.py  segmenter.py
src/subtitles/: __init__.py  chunker.py  generator.py
src/tts/: __init__.py  audio_processing.py  base.py  edge_tts_backend.py  (+1 more)
tests/: test_archetype.py  test_assembler.py  test_bible.py  test_config.py  test_harvester.py  test_image_gen.py  test_manifest_manager.py  test_models.py  test_narrator_v2.py  test_prompt_generator.py  test_ref_selector.py  test_replicate_gen.py  test_scene_analyzer.py  test_scraper.py  test_segmenter.py  test_sentence_splitter.py  test_subtitles.py  test_tts.py  test_visual_sheet.py
